force-app/main/default/objects/aig_AI_Use_Case_Stakeholder__c/aig_AI_Use_Case_Stakeholder__c.object-meta.xml
<CustomObject>
    <label>AI Use Case Stakeholder</label>
    <nameField>
        <displayFormat>AIS-{0000}</displayFormat>
        <label>Stakeholder</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Use Case Stakeholders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>