force-app/main/default/objects/aig_AI_Use_Case_Stakeholder__c/fields/aig_AI_Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>aig_AI_Stakeholder__c</fullName>
    <label>AI Stakeholder</label>
    <referenceTo>aig_AI_Stakeholder__c</referenceTo>
    <relationshipLabel>AI Use Case Stakeholders</relationshipLabel>
    <relationshipName>AI_Use_Case_Stakeholders</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>