force-app/main/default/objects/aig_AI_Use_Case_Stakeholder__c/fields/aig_Contact__c.field-meta.xml
<CustomField>
    <fullName>aig_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>AI Use Case Stakeholders</relationshipLabel>
    <relationshipName>aig_AI_Use_Case_Stakeholders</relationshipName>
    <type>Lookup</type>
</CustomField>