force-app/main/default/objects/aig_AI_Use_Case_Stakeholder__c/fields/aig_Other_Role__c.field-meta.xml
<CustomField>
    <fullName>aig_Other_Role__c</fullName>
    <label>Other Role</label>
    <length>60</length>
    <type>Text</type>
</CustomField>