force-app/main/default/objects/aig_AI_Use_Case_Stakeholder__c/fields/aig_Responsibilities__c.field-meta.xml
<CustomField>
    <fullName>aig_Responsibilities__c</fullName>
    <label>Responsibilities</label>
    <type>TextArea</type>
</CustomField>