force-app/main/default/objects/aig_AI_Use_Case_Stakeholder__c/fields/aig_Role__c.field-meta.xml
<CustomField>
    <fullName>aig_Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Executive Sponsor</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>Data Owner</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Tester</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>