force-app/main/default/objects/aig_AI_Use_Case_Stakeholder__c/fields/aig_Stakeholder_Name__c.field-meta.xml
<CustomField>
    <fullName>aig_Stakeholder_Name__c</fullName>
    <formula>aig_AI_Stakeholder__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stakeholder Name</label>
    <type>Text</type>
</CustomField>