force-app/main/default/objects/aig_AI_Use_Case_Stakeholder__c/fields/aig_User__c.field-meta.xml
<CustomField>
    <fullName>aig_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>aig_AI_Use_Case_Stakeholders</relationshipName>
    <type>Lookup</type>
</CustomField>